Compar: - switch all comparers and items to use new FieldValue classes - IsofoxSummary - removed ReadLength and EnrichedGenePerc - VChordComparer - remove PancreaticCancerScore and ProstateCancerScore - NovelSpliceJunctionData - removedf liftover support